applications/samples/demo-nginx-app/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-sample
  namespace: apps
spec:
  replicas: 3
  strategy:
    blueGreen:
      activeService: service-a
  selector:
    matchLabels:
      app: nginx-sample
      app.kubernetes.io/name: demo-nginx
      app.kubernetes.io/part-of: sample-apps
  template:
    metadata:
      labels:
        app: nginx-sample
        app.kubernetes.io/name: demo-nginx
        app.kubernetes.io/part-of: sample-apps
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
